7/21/2009
  - made it a gem
  - more thorough tests of OAuth 1.0 consumer
  - Add support for a OAUTH_10_SUPPORT constant to switch on support for OAuth 1.0 in provider
7/19/2009
  - Added support for OAuth 1.0 consumers (nov)
7/17/2009
  - Added back support for OAuth 1.0 for providers (nov)
7/14/2009
  - Added OAuth Consumer generator
  - Moved oauth controller code to a module to make it easier to upgrade in the future
7/11/2009
  - Added support for OAuth version 1.0a
  - Added haml support
  - Improved OAuth Client Controller gui (alec-c4)
2/11/2009
- Fixed escaping error and file path error in the generator simultaneously reported and fixed by Ivan Valdes and Mike Demers thanks

2/9/2009
- Fixed compatibility issue with OAuth Gem 3.1 (wr0ngway and aeden)
- Added Test:Unit tests to generator (Ed Hickey)
- added missing oauth_clients/edit.html.erb view template (Ed Hickey)
- added missing :oauth_clients resource route in USAGE (Ed Hickey)
- Don't throw NPE it token is not in db (Haruska)
- Cleaned up whitespace (bricolage, Nicholas Nam)
- Fixed bug in default verify_oauth_signature (igrigorik)
- Doc fixes (skippy)

6/23/2008

- Split OAuth controller into two parts: OAuth and OAuth clients. [jcrosby]

revision 31

- patch that fixes a problem in oauth_required from Hannes Tyden and Sean Treadway from SoundCloud. Thanks.

revision 30

- updated to use oauth gem 0.2.1


revision 23

- removed all core libraries from plugin. They are now in the oauth gem.

# oauth-plugin-pre-gem Branch created

revision 18
- added a generator for creation oauth_providers

revision 12
- the bug with post and put has now been fixed.
- better documentation

revision 9
- added a test helper. Include OAuth::TestHelper in your tests or specs to mock incoming requests

revision: 8
- moved tests into oauth folder and renamed them to make them work with autotest by default
- Refactored the request methods to make them more flexible and ready for integrating with ActiveResource