@@ -1,11 +1,12 @@
 require 'agree2'
 class Agree2Token < ConsumerToken
-  def self.agree2_client
-    @agree2_client||=Agree2::Client.new OAUTH_CREDENTIALS[:agree2][:key],OAUTH_CREDENTIALS[:agree2][:secret]
+  AGREE2_SETTINGS={:site=>"https://agree2.com"}
+  def self.consumer
+    @consumer||=OAuth::Consumer.new credentials[:key],credentials[:secret],AGREE2_SETTINGS
   end
   
-  def self.consumer
-    agree2_client.consumer
+  def self.agree2_client
+    @agree2_client||=Agree2::Client.new credentials[:key],credentials[:secret]
   end
   
   def client
