@@ -2,7 +2,7 @@
 
 Gem::Specification.new do |s|
   s.name = %q{oauth-plugin}
-  s.version = "0.3.5"
+  s.version = "0.3.6"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Pelle Braendgaard"]
@@ -76,6 +76,7 @@ Gem::Specification.new do |s|
      "lib/oauth/controllers/provider_controller.rb",
      "lib/oauth/models/consumers/service_loader.rb",
      "lib/oauth/models/consumers/services/agree2_token.rb",
+     "lib/oauth/models/consumers/services/fireeagle_token.rb",
      "lib/oauth/models/consumers/services/twitter_token.rb",
      "lib/oauth/models/consumers/token.rb",
      "oauth-plugin.gemspec",
